--- a/index.html
+++ b/index.html
@@ -2,11 +2,59 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>김민훈</title>
-	<meta>
+	<title>그리움</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script defer src="main.js"></script>
 </head>
 <body>
-	
+	<header>
+		<h1 id="brand__name">더그리움</h1>
+		<ul class="menu">
+			<li class="menu__item">납골당/봉안담</li>
+			<li class="menu__item">수목장/평장묘</li>
+			<li class="menu__item">납골묘/매장묘</li>
+			<li class="menu__item">상담신청</li>
+		</ul>
+	</header>
+	<section id="home">
+		<h1>마주시간을 편안하게</h1>
+	</section>
+	<section id="main">
+
+	</section>
+	<section id="course">
+		<div class="consulting">
+			상담
+		</div>
+		<div class="consulting">
+			시설확인? 현장답습
+		</div>
+		<div class="consulting">
+			분양
+		</div>
+	</section>
+	<section id="place">
+		<div class="place__card">
+			<img src="imgs/course1.jpeg" alt="" class="place__img">
+			<h1>서울</h1>
+			<p>시설 좋음</p>
+		</div>
+		<div class="place__card">
+			<img src="imgs/용인업소/묘지예시.jpeg" alt="" class="place__img">
+			<div class="place__description">
+				<h1>양평</h1>
+				<p>넓은 부지, 따뜻한 분위기</p>
+			</div>
+		</div>
+	</section>
+	<!-- <aside id="reserve">
+		예약
+	</aside> -->
+	<footer id="contact">
+		<h3>김민훈 010-1234-5678</h3>
+		<h3>copyright</h3>
+	</footer>
 </body>
 </html>
