add: CSS and imgs

--- a/index.html
+++ b/index.html
@@ -25,15 +25,24 @@
 
 	</section>
 	<section id="course">
-		<div class="consulting">
-			상담
-		</div>
-		<div class="consulting">
-			시설확인? 현장답습
-		</div>
-		<div class="consulting">
-			분양
-		</div>
+		<i class="steps" id="consulting">
+			<div class="steps__title">
+				상담
+				<p class="steps__description">설명</p>
+			</div>
+		</i>
+		<i class="steps" id="guidance">
+			<div class="steps__title">
+				시설확인? 현장답습
+				<p class="steps__description">설명</p>
+			</div>
+		</i>
+		<i class="steps" id="contract">
+			<div class="steps__title">
+				분양
+				<p class="steps__description">설명</p>
+			</div>
+		</i>
 	</section>
 	<section id="place">
 		<div class="place__card">
@@ -49,9 +58,15 @@
 			</div>
 		</div>
 	</section>
-	<!-- <aside id="reserve">
-		예약
-	</aside> -->
+	<section id="reservation">
+		<div class="date">날짜</div>
+		<div class="option">장지 형태 < 다른말 없나? , menu or option</div>
+		<button>상담신청</button>
+		<div class="contact_info">
+			<span class="digit"></span>
+			<span class="name">담당자 : 김민훈</span>
+		</div>
+	</section>
 	<footer id="contact">
 		<h3>김민훈 010-1234-5678</h3>
 		<h3>copyright</h3>
